--- a/Content/Programming/javascript/css/styles.css
+++ b/Content/Programming/javascript/css/styles.css
@@ -2,6 +2,7 @@ body{
   margin-left: 0;
   margin-top: 0;
   font-family: sans-serif;
+  color: black;
 }
 
 .active{
@@ -326,6 +327,7 @@ padding-right: 15px;
   padding-top: 35px;
     padding-left: 10px;
     padding-bottom: 10px;
+    margin-bottom: 40px;
 }
 
 
