--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,10 @@ li a:hover {
     padding: 0 0;
   }
 
+  .social_media{
+    display: none;
+  }
+
 
 }
 
@@ -249,7 +253,7 @@ li a:hover {
   .menu-button{
     display: none;
   }
-
+ 
 
 }
 
