javascript social media 4

--- a/css/styles.css
+++ b/css/styles.css
@@ -251,8 +251,8 @@ li a:hover {
   .menu-button{
     display: none;
   }
-  #social_media{
-    display: block;
+  .social_media{
+    display: none;
   }
 
 }
